[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Ground.tres" type="Texture" id=1]
[ext_resource path="res://Scenes/obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/sol.gd" type="Script" id=3]
[ext_resource path="res://Scenes/coin.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.5, 26.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 30 )

[node name="sol" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 71.5, 227.5 )
shape = SubResource( 1 )

[node name="coin" parent="." instance=ExtResource( 4 )]
position = Vector2( 54, 32 )

[node name="obstacles" type="Node2D" parent="."]
position = Vector2( 127, 103 )
rotation = -3.14159

[node name="obstacle" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 0, -110 )
rotation = 3.14159

[node name="obstacle2" parent="obstacles" instance=ExtResource( 2 )]
position = Vector2( 0, 110 )

[node name="score_hitbox" type="Area2D" parent="obstacles"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="obstacles/score_hitbox"]
position = Vector2( -0.500053, 1.52588e-05 )
shape = SubResource( 2 )

[node name="sol" type="Sprite" parent="."]
position = Vector2( 85, 228 )
texture = ExtResource( 1 )
offset = Vector2( -14, 0 )

[node name="coin_top_left" type="Position2D" parent="."]
position = Vector2( 22, 27 )

[node name="coin_bottom_right" type="Position2D" parent="."]
position = Vector2( 80, 160 )

[connection signal="body_entered" from="." to="." method="_on_sol_body_entered"]
[connection signal="body_entered" from="obstacles/score_hitbox" to="." method="_on_score_hitbox_body_entered"]
